--- a/Front-end/styles.css
+++ b/Front-end/styles.css
@@ -444,5 +444,27 @@ body {
     .social-links {
         justify-content: center;
     }
+    select {
+      padding: 10px;
+      font-size: 16px;
+      margin-top: 10px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      background-color: #f9f9f9;
+    }
+    select {
+      padding: 10px;
+      font-size: 16px;
+      margin-top: 10px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      background-color: #f9f9f9;
+  }
+  
+  select:focus {
+      border-color: #007BFF;
+  }
+  
+    
 }
   
